get applications with pages and filters done
