# api.yaml
@@ -44,7 +44,7 @@ paths:
           example: 1
           required: true
       responses:
-        201:
+        204:
           description: Успешный ответ
           content:
             application/json:
@@ -61,13 +61,13 @@ paths:
           example: 1
           required: true
       responses:
-        201:
+        204:
           description: Успешный ответ
           content:
             application/json:
               schema:
                 type: object
-  /api/integrations:
+  /api/audiences/integrations:
     post:
       requestBody:
         required: true
@@ -910,7 +910,7 @@ paths:
                         login: "ivanov"
                         action: "edit"
                         role: "admin"
-                        created_at: "2021-01-01"
+                        created_at: "2024-11-14T21:00:00.000Z"
                         surname: "Иванов"
                         patronymic: "Иванович"
                         name: "Иван"
@@ -920,7 +920,7 @@ paths:
                         login: "petrov"
                         action: "edit"
                         role: "user"
-                        created_at: "2021-01-02"
+                        created_at: "2024-11-14T21:00:00.000Z"
                         surname: "Петров"
                         patronymic: "Петрович"
                         name: "Петр"
@@ -929,7 +929,7 @@ paths:
                         login: "sidorov"
                         action: "edit"
                         role: "user"
-                        created_at: "2021-01-03"
+                        created_at: "2024-11-14T21:00:00.000Z"
                         surname: "Сидоров"
                         patronymic: "Сидорович"
                         name: "Сидор"
@@ -1116,8 +1116,10 @@ components:
       type: object
       description: Вид подключения для отображения
       properties:
-        cabinet:
-          $ref: '#/components/schemas/Cabinet'
+        cabinet_name:
+          type: string
+          example: yandex
+#          $ref: '#/components/schemas/Cabinet'
         id:
           type: integer
           description: Идентификатор интеграции
@@ -1126,11 +1128,11 @@ components:
       type: object
       description: Запрос на подключение
       properties:
-        cabinet:
-          type: integer
-          example: 1
-          description: id кабинета
-        audiences:
+        cabinet_name:
+          type: string
+          example: yandex
+          description: название кабинета
+        audience_ids:
           type: array
           items:
             type: integer
@@ -1152,15 +1154,15 @@ components:
           type: string
           description: Продолжительность
           example: '1 день 3 часа'
-        created:
+        created_at:
           type: string
           description: Дата создания
-          example: Sat Oct 19 2024 17:47:50 GMT+0300 (Москва, стандартное время)
-        updated:
+          example: '2024-11-14T21:00:00.000Z'
+        updated_at:
           type: string
           description: Дата изменения
-          example: Sat Oct 19 2024 17:47:50 GMT+0300 (Москва, стандартное время)
-        integrated:
+          example: '2024-11-14T21:00:00.000Z'
+        integrations:
           type: array
           items:
             $ref: '#/components/schemas/Integration'
@@ -1172,18 +1174,34 @@ components:
           type: string
           description: Название
           example: "Бронь"
-        start:
+          #required: true
+        filter:
+          $ref: '#/components/schemas/AudienceCreateRequestFilter'
+#          required: true
+#          type: object
+
+    AudienceCreateRequestFilter:
+      type: object
+      minProperties: 1
+      properties:
+        creation_date_from:
           type: string
           example: Sat Oct 19 2024 17:47:50 GMT+0300 (Москва, стандартное время)
-        end:
+        creation_date_to:
           type: string
           example: Sat Oct 19 2024 17:47:50 GMT+0300 (Москва, стандартное время)
-        status_id:
-          type: integer
-        reason_status_reject:
-          type: integer
-        reason_status_no_purpose:
-          type: integer
+        statuses:
+          type: array
+          items:
+            type: string
+        rejection_reasons:
+          type: array
+          items:
+            type: string
+        non_target_reasons:
+          type: array
+          items:
+            type: string
         applications:
           type: array
           items:
